[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/BaseOverlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/DefaultLabelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ConfigOverlay.gd" type="Script" id=3]

[node name="ConfigOverlay" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Title" parent="Panel/VBoxContainer/TitleBar/HBoxContainer" index="0"]
margin_right = 333.0
text = "Configuration Terminal"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/TitleBar" index="1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 758.0
margin_bottom = 48.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseOverlayButton" type="Button" parent="Panel/VBoxContainer/TitleBar/HBoxContainer2" index="0"]
margin_left = 728.0
margin_right = 748.0
margin_bottom = 38.0
text = "X"

[node name="Content" parent="Panel/VBoxContainer" index="1"]
margin_bottom = 104.0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/Content" index="0"]
margin_left = 20.0
margin_right = 748.0
margin_bottom = 52.0
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Content/GridContainer" index="0"]
margin_top = 2.0
margin_right = 20.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "P1"

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/Content/GridContainer" index="1"]
margin_left = 30.0
margin_right = 88.0
margin_bottom = 24.0
text = "0"

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Content/GridContainer" index="2"]
margin_top = 30.0
margin_right = 20.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "P2"

[node name="LineEdit2" type="LineEdit" parent="Panel/VBoxContainer/Content/GridContainer" index="3"]
margin_left = 30.0
margin_top = 28.0
margin_right = 88.0
margin_bottom = 52.0
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" index="1"]
margin_left = 13.0
margin_top = 394.919
margin_right = 87.0
margin_bottom = 433.919
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="Panel/HBoxContainer" index="0"]
margin_right = 41.0
margin_bottom = 39.0
text = "Save"
